Dark mode fixed + Project_temp

--- a/css/styleguide.css
+++ b/css/styleguide.css
@@ -8,25 +8,19 @@
 }
 
 :root {
-    --color-main-light: #ffec82;
-    --color-main-medium: #FFD800;
-    --color-main-dark: #a88f00;
-
-    /* Theme Mode */
-    --color-light: #FAFAFA;
-    --color-dark: #212121;
-    /* --color-light: rgb(250, 250, 250); RGBA VALUES 
-    --color-dark: rgb(33, 33, 33); */
+    --color-main-light: #ffa53e;
+    --color-main-medium: #F98600;
+    --color-main-dark: #b86200;
 }
 
-[data-theme="isLight"] {
-    --color-light: #212121;
-    --color-dark: #FAFAFA;
+[data-theme="Light"] {
+    --secondary-color: #212121;
+    --main-color: #FAFAFA;
 }
 
-[data-theme="isDark"] {
-    --color-light: #FAFAFA;
-    --color-dark: #212121;
+[data-theme="Dark"] {
+    --secondary-color: #FAFAFA;
+    --main-color: #212121;
 }
 
 body,
@@ -40,10 +34,10 @@ body {
     font-size: 100%;
     font-family: 'Roboto', sans-serif;
     padding: 2.6em;
-    padding-bottom: 3.6em;
+    /* padding-bottom: 3.6em; */
 
-    background-color: var(--color-dark);
-    color: var(--color-light);
+    background-color: var(--main-color);
+    color: var(--secondary-color);
 }
 
 header {
@@ -206,7 +200,7 @@ footer {
 
 .filter-trigger {
 
-    color: var(--color-light);
+    color: var(--secondary-color);
 
     &.active {
         color: var(--color-main-medium);
@@ -222,7 +216,7 @@ footer {
     padding-inline-start: 0;
 }
 
-/* HEADER CLASSES  */
+/* THEME COLOR CONTAINER  */
 #theme-container {
     width: 50px;
     height: 50px;
@@ -261,7 +255,7 @@ footer {
 
 .bullet {
     position: absolute;
-    background-color: var(--color-dark);
+    background-color: var(--main-color);
     border: 2px solid var(--color-main-medium);
     border-radius: 50%;
     content: "";
@@ -278,7 +272,7 @@ footer {
     padding: 4px;
     transform: translate(-56px, 0) rotate(-90deg);
     z-index: 1;
-    background-color: var(--color-dark);
+    background-color: var(--main-color);
 }
 
 .start-text {
@@ -328,8 +322,8 @@ footer {
     left: 0;
     height: 120%;
     width: 100%;
-    background-color: var(--color-dark);
-    border-left: 2px solid var(--color-light);
+    background-color: var(--main-color);
+    border-left: 2px solid var(--secondary-color);
 }
 
 .typing::after {
@@ -367,13 +361,13 @@ footer {
 }
 
 .portfolio-nav {
-    border-bottom: 2px solid var(--color-light);
+    border-bottom: 2px solid var(--secondary-color);
 }
 
 .portfolio {
     padding: 4em 0;
     position: relative;
-    border-bottom: 2px solid var(--color-light);
+    border-bottom: 2px solid var(--secondary-color);
 
     opacity: 1;
     max-height: 1000px;
@@ -421,6 +415,7 @@ footer {
 /* PROJECT CLASSES  */
 .project {
     height: 100%;
+    padding: 20px;
 }
 
 .back-button {
@@ -428,7 +423,7 @@ footer {
 }
 
 .project-left {
-    height: 90%;
+    height: 100%;
     flex: 1;
     justify-content: end;
 }
@@ -445,7 +440,7 @@ footer {
     font-size: 2em;
     font-weight: bold;
 
-    border-bottom: 2px solid var(--color-light);
+    border-bottom: 2px solid var(--color-main-medium);
 
     justify-content: space-between;
 }
@@ -460,8 +455,11 @@ i {
     cursor: pointer;
 
     &:hover {
-        opacity: 0.7;
-        /*!! must-change !!*/
+        color: var(--color-main-medium);
+    }
+
+    &:active {
+        color: var(--color-main-dark);
     }
 }
 
@@ -477,11 +475,17 @@ i {
     margin-top: 2em;
 }
 
+.project-text p {
+    margin-top: 10px;
+}
+
 .project-carrousel {
+    cursor: crosshair;
     flex: 1;
     align-items: flex-start;
     overflow-y: auto;
     scrollbar-width: thin;
+    height: 100%;
 }
 
 .project-carrousel::-webkit-scrollbar {
@@ -500,12 +504,9 @@ i {
     object-fit: contain;
 }
 
-.project-img:first-child {
-    padding-top: .8em;
-}
 
-.project-img:last-child {
-    padding-bottom: 2em;
+iframe {
+    width: 100%;
 }
 
 /* ABOUT CLASSES */
@@ -515,7 +516,7 @@ i {
 }
 
 .profile-title {
-    border-bottom: 2px solid var(--color-light);
+    border-bottom: 2px solid var(--secondary-color);
     padding: 10px 0;
     margin-bottom: 2em;
 
@@ -540,7 +541,7 @@ i {
 
 .divider {
     width: 50px;
-    border-bottom: 2px solid var(--color-light);
+    border-bottom: 2px solid var(--secondary-color);
     margin: 10px;
 }
 
